--- a/rabbitmq-training/src/main/resources/application.properties
+++ b/rabbitmq-training/src/main/resources/application.properties
@@ -5,15 +5,40 @@ spring.rabbitmq.username=rabbit
 spring.rabbitmq.password=rabbitmq
 
 # Direct Exchange configuration
-training.rabbitmq.queue=tranning.queue
-training.rabbitmq.exchange=training.exchange
-training.rabbitmq.routingkey=training.routingkey
+direct.training.rabbitmq.queue=direct-training-queue
+direct.training.rabbitmq.exchange=direct-training-exchange
+direct.training.rabbitmq.routing.key=direct-training-routing-key
+
+# Topic Exchange configuration
+topic.training.rabbitmq.queue=topic-training-queue
+topic.training.rabbitmq.exchange=topic-training-exchange
+topic.training.rabbitmq.routing.key=topic-training-routing-key
+
+# FanOut Exchange configuration
+fan.out.training.rabbitmq.queue=fan-out-training-queue
+fan.out.training.rabbitmq.exchange=fan-out-training-exchange
+fan.out.training.rabbitmq.routing.key=fan-out-training-routing-key
+
+# Queue Name Define
+electronic.topic.name= topic_electronic_name
+fashion.topic.name= topic_fashion_name
+doy.topic.name= topic_doy_name
+kid.fashion.topic.name= topic_kid_fashion_name
+queue.all.name=topic_queue_all_name
+
+# Routing Key Define
+queue.all.routing.key=queue-*
+queue.doy.routing.key=queue-doy
+queue.electronic.routing.key=queue-electronic
+queue.fashion.routing.key=queue-fashion
+queue.kid.fashion.routing.key=queue-kid-fashion
+
+
+# Dead Letter
+deadLetter.rabbitmq.queue=deadLetter-queue
+deadLetter.rabbitmq.exchange=deadLetter-exchange
+deadLetter.rabbitmq.routing.key=deadLetter-routing-key
 
 spring.main.allow-bean-definition-overriding=true
 spring.rabbitmq.listener.direct.retry.enabled=true
 spring.rabbitmq.listener.simple.retry.enabled=true
-
-# Dead Letter
-deadLetter.rabbitmq.queue=deadLetter.queue
-deadLetter.rabbitmq.exchange=deadLetter.exchange
-deadLetter.rabbitmq.routingkey=deadLetter.routingkey
