--- a/rabbitmq-training/src/main/resources/application.properties
+++ b/rabbitmq-training/src/main/resources/application.properties
@@ -3,21 +3,20 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=rabbit
 spring.rabbitmq.password=rabbitmq
+spring.rabbitmq.
+
+training.rabbitmq.queue==training-queue
+training.rabbitmq.exchange=training-exchange
+training.rabbitmq.routing.key=training-routing-key
 
 # Direct Exchange configuration
-direct.training.rabbitmq.queue=direct-training-queue
-direct.training.rabbitmq.exchange=direct-training-exchange
-direct.training.rabbitmq.routing.key=direct-training-routing-key
+direct.training.rabbitmq.exchange=training-direct-exchange
 
 # Topic Exchange configuration
-topic.training.rabbitmq.queue=topic-training-queue
 topic.training.rabbitmq.exchange=topic-training-exchange
-topic.training.rabbitmq.routing.key=topic-training-routing-key
 
 # FanOut Exchange configuration
-fan.out.training.rabbitmq.queue=fan-out-training-queue
 fan.out.training.rabbitmq.exchange=fan-out-training-exchange
-fan.out.training.rabbitmq.routing.key=fan-out-training-routing-key
 
 # Queue Name Define
 electronic.topic.name= topic_electronic_name
@@ -27,11 +26,11 @@ kid.fashion.topic.name= topic_kid_fashion_name
 queue.all.name=topic_queue_all_name
 
 # Routing Key Define
-queue.all.routing.key=queue-*
-queue.doy.routing.key=queue-doy
-queue.electronic.routing.key=queue-electronic
-queue.fashion.routing.key=queue-fashion
-queue.kid.fashion.routing.key=queue-kid-fashion
+queue.all.routing.key=queue.*
+queue.doy.routing.key=queue.doy
+queue.electronic.routing.key=queue.electronic
+queue.fashion.routing.key=queue.fashion
+queue.kid.fashion.routing.key=queue.kid.fashion
 
 
 # Dead Letter
@@ -40,5 +39,5 @@ deadLetter.rabbitmq.exchange=deadLetter-exchange
 deadLetter.rabbitmq.routing.key=deadLetter-routing-key
 
 spring.main.allow-bean-definition-overriding=true
-spring.rabbitmq.listener.direct.retry.enabled=true
-spring.rabbitmq.listener.simple.retry.enabled=true
+#spring.rabbitmq.listener.direct.retry.enabled=true
+#spring.rabbitmq.listener.simple.retry.enabled=true
